# mochi_phonebook

./: CMakeLists.txt
examples/: CMakeLists.txt  admin.cpp  client.cpp  server.cpp
include/YP/: Admin.hpp  AsyncRequest.hpp  Backend.hpp  Client.hpp  PhonebookHandle.hpp  Provider.hpp  RequestResult.hpp  UUID.hpp
src/: Admin.cpp  AdminImpl.hpp  AsyncRequest.cpp  AsyncRequestImpl.hpp  Backend.cpp  BedrockModule.cpp  CMakeLists.txt  Client.cpp  ClientImpl.hpp  PhonebookHandle.cpp  PhonebookHandleImpl.hpp  Provider.cpp  ProviderImpl.hpp  YP-admin.pc.in  YP-client.pc.in  YP-config.cmake.in  YP-server.pc.in
src/dummy/: DummyBackend.cpp  DummyBackend.hpp
tests/: AdminTest.cpp  CMakeLists.txt  ClientTest.cpp  PhonebookTest.cpp
